# Carter-Querio-notebook

./: .gitignore  DEPLOYMENT_CHECKLIST.md  README.md  check-dns-propagation.sh  flush-dns-mac.sh  package-lock.json  pytest.ini  requirements.txt  test-clerk-dns.sh  the_task.md
backend/: .dockerignore  Dockerfile  README.md  ast_parser.py  audit.py  chat.py  demo_notebook.py  executor.py  export_openapi.py  llm_tools.py  main.py  models.py  notebook_operations.py  pyproject.toml  pytest.ini  requirements.txt  routes.py  scheduler.py  storage.py  storage_dynamodb.py  test_integration.py  websocket.py
backend/.backup/: chat.py  demo_notebook.py  executor.py  graph.py  main.py  notebook_operations.py  routes.py  storage.py
backend/app/: __init__.py  file_storage.py  main.py  models.py
backend/notebooks/: 186d2c07-ee99-4828-a3f4-f07517cc0130.json  2609f341-324f-4128-b090-639510f82c57.json  blank-user_37U0GVSi47Y4pucE7h9iZVesr4b.json  d69d5282-33b4-4ec0-b9c3-2c5a23b456c7.py  d8c77981-3155-4238-896a-4bf4e1ca9207.py  demo-user_37U0GVSi47Y4pucE7h9iZVesr4b.json  demo.json  e069b89e-9910-4750-af1c-f46c7291bad7.json  f65880ee-d102-4d77-b1c0-9ee7db6ffe81.py  test-commands.py  test-concurrency.json  test-create-delete.json  test-crud.py  test-cycle.py  test-demo.py  test-diamond.py  test-empty.py  test-has-run.py  test-independent.py  test-matplotlib.py  test-mixed.json  test-notebook.json  test-optimistic.json  test-pandas.py  test-plotly.py  test-reactive.py  test-sql.py  test.py
backend/scripts/: deploy.sh  docker-test.sh  health-check.sh  setup_local_dynamodb.sh  (+2 more)
(+248 files in other folders)
