[project]
name = "notebook-backend"
version = "0.1.0"
description = "File-based reactive notebook backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
    "asyncpg>=0.29.0",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.24.0",
]
viz = [
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
]
data = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "altair>=5.0.0",
]
